--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -15,11 +15,13 @@
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <ProgressBar
+            android:layout_gravity="center"
             android:id="@+id/loading_calendar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
         <TextView
+            android:layout_gravity="center"
             android:id="@+id/calendar_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
